# small-doge

./: .gitignore  Makefile  README.md  README_zh.md  WEBUI_EXTENSIONS.md  pyproject.toml  setup.cfg  setup.py  train.py
docs/: Doge-160M-Instruct-SFT.md  Doge-160M-Instruct.md  Doge-160M-Reason-Distill.md  Doge-160M-checkpoint.md  Doge-160M.md  Doge-20M-Instruct-SFT.md  Doge-20M-Instruct.md  Doge-20M-checkpoint.md  Doge-20M.md  Doge-320M-Instruct-SFT.md  Doge-320M-Instruct.md  Doge-320M-checkpoint.md  Doge-320M.md  Doge-40M-MoE-checkpoint.md  Doge-40M-checkpoint.md  Doge-60M-Instruct-SFT.md  Doge-60M-Instruct.md  Doge-60M-checkpoint.md  Doge-60M.md  Doge-tokenizer.md  Doge2-tokenizer.md  dataset_processors.md  installation.md  models.md  quickstart.md  training.md  webui.md
evaluation/: README.md  eval_downstream_tasks.ps1  eval_downstream_tasks.sh
evaluation/base/: doge_base.txt  tasks.py
evaluation/instruct/: doge_instruct.txt
evaluation/reason/: doge_reason.txt  tasks.py
examples/: notebook.ipynb  notebook_zh.ipynb
examples/utils/: concatenate_ft_datasets.py  convert_old2new.py  download_ft_dataset.py  download_ft_datasets.py  download_pt_datasets.py  preprocess_ft_datasets.py  preprocess_pt_dataset_Cinese.py  preprocess_pt_datasets.py  train_tokenizer_from_old.py  train_tokenizer_from_old_chinese.py
projects/litecot/: LICENSE  README.md  Readme copy.md  requirements.txt  sft.py  zero3.yaml  zero3_offload.yaml
projects/litecot/config/: config1.5b-qwen2.5-math-short25k.yaml  config14b-qwen2.5.yaml  config32b-qwen2.5.yaml  config7b-qwen2.5-math-short25k.yaml
recipes/: README.md
recipes/accelerate_configs/: single_gpu.yaml  zero0.yaml  zero1.yaml  zero2.yaml  zero3.yaml
recipes/doge/: README.md  README_zh.md
recipes/doge/Doge-1.4B-MoE/: config_full.yaml
src/samll_doge/: __init__.py  pt.py
src/small_doge/: __init__.py  dpo.py  grpo.py  pt.py  sft.py
webui/: README.md  requirements.txt  sum.md
webui/api/: README.md  pages.py  test.py
webui/configs/: __init__.py  api_config.py  app_config.py  db_config.py  generation_configs.py  logging_config.py  model_config.py  model_lists.py  rag_config.py
webui/inference/: main.py
webui/interfaces/: __init__.py  api.py  inference.py
webui/pages/: inference.py
webui/utils/: API.py  README.md  api_client.py  db_utils.py  get_pt_datasets.py
(+159 files in other folders)
