[project]
name = "small_doge"
description = "A Family of Dynamic Ultra-Fast Small Language Models Ready for Embodied Artificial General Intelligence!"
readme = "README.md"
authors = [
    { name = "Jingze Shi", email = "losercheems@gmail.com" }
]
requires-python = ">=3.9"
dynamic = ["version"]
license = { text = "Apache-2.0"}
keywords = ['small-doge', 'doge', 'small language models', 'pytorch', 'transformers', 'trl']
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "torch",
    "datasets",
    "transformers @ git+https://github.com/LoserCheems/transformers.git@support-constant-lr-with-cooldown",
    "accelerate",
    "trl",
    "sentencepiece",
]
urls = { name = "Repository", url = "https://github.com/SmallDoges/small-doge"}

[build-system]
requires = [
    "setuptools>=61.0.0",
    "wheel",
    "torch",
    "packaging",
]
build-backend = "setuptools.build_meta"